package search;
import java.util.LinkedList;
import java.util.List;




public class Root {
    List<Item> items = new LinkedList<>();
}

